application/k8s/crawler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  labels:
    app: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
      - name: crawler
        image: mamontov/crawler:v1.3
        command:
          - python3
        args:
          - "/crawler.py"
          - "https://vitkhab.github.io/search_engine_test_site/"
        ports:
        - containerPort: 8000
