application/k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: mamontov/ui:v1.2-crawler
        command:
          - /usr/bin/gunicorn
        args:
          - "-b 0.0.0.0"
          - "ui:app"
        ports:
        - containerPort: 8000
