application/k8s/crawler-service.yml
kind: Service
apiVersion: v1
metadata:
  name: crawler-service
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
  - port: 8000
    targetPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: crawler-service
  namespace: monitoring
spec:
  type: ExternalName
  externalName: crawler-service.default.svc.cluster.local
  ports:
  - port: 8000
