application/k8s/rabbit-service.yml
kind: Service
apiVersion: v1
metadata:
  name: rabbit-service
spec:
  type: ClusterIP
  selector:
    app: rabbit
  ports:
  - port: 5672
    targetPort: 5672
