application/k8s/ui-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
  - port: 8000
    targetPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: ui-service
  namespace: monitoring
spec:
  type: ExternalName
  externalName: ui-service.default.svc.cluster.local
  ports:
  - port: 8000
