application/k8s/ui-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ui.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui-service
          servicePort: 8000
